--- a/kauppalista/.prettierrc
+++ b/kauppalista/.prettierrc
@@ -1,11 +1,8 @@
 {
-    "useTabs": false,
-    "tabWidth": 4,
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "printWidth": 79,
-    "proseWrap": "always",
-    "bracketSpacing": false,
-    "plugins": ["prettier-plugin-svelte"],
-    "overrides": [{"files": "*.svelte", "options": {"parser": "svelte"}}]
+	"useTabs": true,
+	"singleQuote": true,
+	"trailingComma": "none",
+	"printWidth": 100,
+	"plugins": ["prettier-plugin-svelte"],
+	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
